--- a/evaluation/objective_3/finetuning_llama_opus_en_tgl.ipynb
+++ b/evaluation/objective_3/finetuning_llama_opus_en_tgl.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -210,17 +210,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data/students/juan/anaconda3/envs/ai351/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -235,8 +227,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Filter: 100%|██████████| 10000/10000 [00:00<00:00, 245883.42 examples/s]\n",
-      "Filter: 100%|██████████| 10000/10000 [00:00<00:00, 260867.38 examples/s]\n"
+      "Filter: 100%|██████████| 10000/10000 [00:00<00:00, 251262.75 examples/s]\n",
+      "Filter: 100%|██████████| 10000/10000 [00:00<00:00, 238268.05 examples/s]\n"
      ]
     }
    ],
@@ -316,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +317,93 @@
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"britllm/CuatroLLM\")\n",
     "model = AutoModelForCausalLM.from_pretrained(\"britllm/CuatroLLM\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 8100/8100 [00:01<00:00, 6418.69 examples/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of training tokens in the dataset: 160678\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tokenize and count tokens\n",
+    "def count_tokens(example):\n",
+    "    tokens = tokenizer.encode(example[\"English\"], add_special_tokens=True)\n",
+    "    return {\"num_tokens\": len(tokens)}\n",
+    "\n",
+    "# Apply tokenization and count tokens\n",
+    "token_counts = train_dataset.map(count_tokens)\n",
+    "total_tokens = sum(token_counts[\"num_tokens\"])\n",
+    "\n",
+    "print(f\"Total number of training tokens in the dataset: {total_tokens}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map:   0%|          | 0/900 [00:00<?, ? examples/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 900/900 [00:00<00:00, 6488.94 examples/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of training tokens in the dataset: 17026\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tokenize and count tokens\n",
+    "def count_tokens(example):\n",
+    "    tokens = tokenizer.encode(example[\"English\"], add_special_tokens=True)\n",
+    "    return {\"num_tokens\": len(tokens)}\n",
+    "\n",
+    "# Apply tokenization and count tokens\n",
+    "token_counts = val_dataset.map(count_tokens)\n",
+    "total_tokens = sum(token_counts[\"num_tokens\"])\n",
+    "\n",
+    "print(f\"Total number of training tokens in the dataset: {total_tokens}\")"
    ]
   },
   {
