--- a/evaluation/objective_3/finetuning_nllb_opus_en_tgl.ipynb
+++ b/evaluation/objective_3/finetuning_nllb_opus_en_tgl.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,9 +222,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/students/juan/anaconda3/envs/ai351/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -239,15 +247,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Filter:   0%|          | 0/10000 [00:00<?, ? examples/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Filter: 100%|██████████| 10000/10000 [00:00<00:00, 247943.06 examples/s]\n",
-      "Filter: 100%|██████████| 10000/10000 [00:00<00:00, 256258.07 examples/s]\n"
+      "Filter: 100%|██████████| 10000/10000 [00:00<00:00, 243567.42 examples/s]\n",
+      "Filter: 100%|██████████| 10000/10000 [00:00<00:00, 256110.99 examples/s]\n"
      ]
     }
    ],
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +282,7 @@
        " 'Split': 'train'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,15 +343,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 8100/8100 [00:01<00:00, 4828.84 examples/s]\n",
-      "Map: 100%|██████████| 900/900 [00:00<00:00, 1100.65 examples/s]\n"
+      "Map: 100%|██████████| 8100/8100 [00:02<00:00, 3659.60 examples/s]\n",
+      "Map: 100%|██████████| 900/900 [00:00<00:00, 5337.49 examples/s]\n"
      ]
     }
    ],
@@ -387,9 +388,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import Seq2SeqTrainingArguments\n",
     "\n",
@@ -420,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +484,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='504' max='504' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [504/504 15:41, Epoch 3/4]\n",
+       "      [504/504 08:20, Epoch 3/4]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -480,19 +496,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>300</td>\n",
-       "      <td>0.201500</td>\n",
-       "      <td>0.113834</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <td>400</td>\n",
-       "      <td>0.174500</td>\n",
-       "      <td>0.119792</td>\n",
+       "      <td>0.287900</td>\n",
+       "      <td>0.110041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>500</td>\n",
-       "      <td>0.152800</td>\n",
-       "      <td>0.120799</td>\n",
+       "      <td>0.297200</td>\n",
+       "      <td>0.107480</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -508,17 +519,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/data/students/juan/anaconda3/envs/ai351/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:71: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "/data/students/juan/anaconda3/envs/ai351/lib/python3.10/site-packages/transformers/modeling_utils.py:2817: UserWarning: Moving the following attributes in the config to the generation config: {'max_length': 200}. You are seeing this warning because you've set generation parameters in the model config, as opposed to in the generation config.\n",
       "  warnings.warn(\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=504, training_loss=0.0857378574354308, metrics={'train_runtime': 945.3505, 'train_samples_per_second': 34.273, 'train_steps_per_second': 0.533, 'total_flos': 5.487609358005043e+16, 'train_loss': 0.0857378574354308, 'epoch': 3.994082840236686})"
+       "TrainOutput(global_step=504, training_loss=0.07174211669535864, metrics={'train_runtime': 510.8521, 'train_samples_per_second': 63.423, 'train_steps_per_second': 0.987, 'total_flos': 5.476714488948326e+16, 'train_loss': 0.07174211669535864, 'epoch': 3.994082840236686})"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,9 +560,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "trainer.save_model('models/finetuned_eng_tgl_nllb')"
    ]
