Clarify 0-shot vs 1-shot evaluations

--- a/evaluation/objective_3/eval_finetuned_en_tgl_llama.ipynb
+++ b/evaluation/objective_3/eval_finetuned_en_tgl_llama.ipynb
@@ -2673,7 +2673,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculate BLEU, chrF++, and TER"
+    "## Calculate BLEU, chrF++, and TER for 0-shot LLaMA Fine-Tuned MT (Eng-Fil)"
    ]
   },
   {
@@ -2754,6 +2754,13 @@
     "\n",
     "print(translations_file_name, \"\\n\")\n",
     "print(*translations[0:5], sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate BLEU, chrF++, and TER for 1-shot LLaMA Fine-Tuned MT (Eng-Fil)"
    ]
   },
   {
