Clarify 0-shot vs 1-shot evaluations for NLLB

--- a/evaluation/objective_3/eval_finetuned_en_tgl_nllb.ipynb
+++ b/evaluation/objective_3/eval_finetuned_en_tgl_nllb.ipynb
@@ -389,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculate BLEU, chrF++, and TER"
+    "## Calculate BLEU, chrF++, and TER for 0-shot NLLB Fine-Tuned MT (Eng-Fil)"
    ]
   },
   {
@@ -438,6 +438,13 @@
     "ter = metric.corpus_score(translations, [references])\n",
     "ter = round(ter.score, 2)\n",
     "print(\"TER:\", ter)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate BLEU, chrF++, and TER for 1-shot NLLB Fine-Tuned MT (Eng-Fil)"
    ]
   },
   {
